--- a/index.html
+++ b/index.html
@@ -13,25 +13,39 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Studio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Portfolio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-menu">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contacts-menu-item">
+            <a class="contacts-menu-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-menu-item">
+            <a class="contacts-menu-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
@@ -67,8 +81,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img
