--- a/index.html
+++ b/index.html
@@ -10,33 +10,42 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
-        <ul>
+        <a class="header-logo link" href="./index.html"
+          ><span class="logo-span">Web</span>Studio</a
+        >
+        <ul class="header-menu list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-menu-link link" href="">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a>
+            <a class="header-menu-link link" href="">Portfolio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
+            <a class="header-menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="contacts-menu">
-        <ul>
+      <address class="contacts">
+        <ul class="contacts-menu list">
           <li class="contacts-menu-item">
-            <a class="contacts-menu-link" href="mailto:info@devstudio.com"
+            <a class="contacts-menu-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-menu-item">
-            <a class="contacts-menu-link" href="tel:+110001111111"
+            <a class="contacts-menu-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -46,35 +55,35 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="hero-buy-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>hidden</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features">
+        <h2 class="visually-hidden">hidden</h2>
+        <ul class="features-menu list">
+          <li class="features-item">
+            <h3 class="features-subtitle">Strategy</h3>
+            <p class="features-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Punctuality</h3>
+            <p class="features-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Diligence</h3>
+            <p class="features-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Technologies</h3>
+            <p class="features-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -83,118 +92,120 @@
       </section>
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team-menu list">
+          <li class="team-item">
             <img
               src="./images/teamcard1.jpg"
               alt="Product Designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard2.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard3.jpg"
               alt="Marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard4.jpg"
               alt="UI Designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-menu list">
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard1.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfoliocard6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-logo-span">Web</span>Studio</a
+      >
+      <p class="footer-item-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
