--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="header-menu list">
           <li class="header-menu-item">
-            <a class="header-menu-link link" href="">Studio</a>
+            <a class="header-menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link link" href="">Portfolio</a>
@@ -55,7 +55,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-buy-btn" type="button">Order Service</button>
+        <button class="hero-bu-btn" type="button">Order Service</button>
       </section>
       <section class="features">
         <h2 class="visually-hidden">hidden</h2>
