--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo link" href="./index.html"
-          ><span class="logo-span">Web</span>Studio</a
+          >Web<span class="logo-span">Studio</span></a
         >
         <ul class="header-menu list">
           <li class="header-menu-item">
@@ -203,7 +203,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-span">Web</span>Studio</a
+        >Web<span class="footer-logo-span">Studio</span></a
       >
       <p class="footer-item-text">
         Increase the flow of customers and sales for your business with digital
