--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-bu-btn" type="button">Order Service</button>
+        <button class="hero-buy-btn" type="button">Order Service</button>
       </section>
       <section class="features">
         <h2 class="visually-hidden">hidden</h2>
